# WebCrawler

./: README.md
back/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  a.py  docker-compose.yml  pyproject.toml
back/api/: main.py
back/api/crud/: crawl_task_crud.py  item_crud.py  link_crud.py  page_crud.py  page_word_crud.py  user_auth_data_crud.py  user_crud.py  word_crud.py
back/api/models/: __init__.py  base.py  crawl_task.py  link.py  page.py  page_word.py  word.py
back/api/routers/: items_router.py  pages_router.py  users_router.py
back/api/schemas/: auth_schemas.py  item_schemas.py  page_schemas.py  user_auth_data_schemas.py  user_schemas.py
back/api/services/: iterm_services.py  page_services.py  search_service.py  user_services.py
back/api/utils/: security.py
back/core/: celery.py  settings.py
back/core/exeptions/: exception.py
back/crawler/: crawler.py
back/db/: alembic.ini  sessions.py
back/db/migrations/: env.py
back/db/migrations/versions/: a1d16ed8c1e5_web_crawler.py  cd1d987e33e9_web_crawler.py  ed5c9d02497f_web_crawler.py
